--- a/header.html
+++ b/header.html
@@ -6,6 +6,11 @@
       <a href="index.html">Home</a>
       <a href="portfolio.html">Portfolio</a>
       <a href="contact.html">Contact</a>
+      <!-- Resume 링크 (Notion) -->
+      <a href="https://www.notion.so/comfunnydevelopers/Resume-79df56014d514305ad462eab49e76a2a" target="_blank" class="resume-link">
+        <!-- <img src="img/notion-icon.png" alt="Notion" class="notion-icon"> -->
+        Resume
+      </a>
     </nav>
   </div>
 </header>
